--- a/package.json
+++ b/package.json
@@ -21,48 +21,49 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "aws-amplify": "^1.1.30",
-    "aws-amplify-vue": "^0.2.13",
+    "@quasar/extras": "^1.10.9",
+    "aws-amplify": "^1.3.3",
+    "aws-amplify-vue": "^0.2.17",
     "aws-appsync": "^1.8.1",
-    "dot-prop": "^6.0.0",
+    "dot-prop": "^6.0.1",
     "fs-extra": "^8.1.0",
-    "localforage": "^1.7.3",
-    "lodash": ">=4.17.19",
+    "localforage": "^1.9.0",
+    "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
-    "mousetrap": "^1.6.3",
+    "mousetrap": "^1.6.5",
     "node-forge": "^0.10.0",
-    "npm": "^6.14.5",
-    "prismjs": "^1.16.0",
-    "quasar": "^1.0.0",
-    "vue-custom-context-menu": "^3.0.1",
-    "vue-drag-resize": "^1.3.2",
-    "vue-draggable-nested-tree": "^2.2.17",
-    "vue-draggable-resizable": "^2.0.0-rc2",
-    "vue-loader": "^15.7.0",
+    "npm": "^6.14.14",
+    "prismjs": "^1.24.1",
+    "quasar": "^1.15.23",
+    "vue-custom-context-menu": "^3.0.3",
+    "vue-drag-resize": "^1.5.4",
+    "vue-draggable-nested-tree": "^2.2.20",
+    "vue-draggable-resizable": "^2.3.0",
+    "vue-loader": "^15.9.6",
     "vue-multiselect": "^2.1.6",
     "vue-prism-editor": "^0.2.1",
     "vued3tree": "^3.7.1",
-    "vuedraggable": "^2.23.0",
-    "vuex": "^3.1.1"
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
     "@quasar/quasar-app-extension-testing": "^1.0.0",
     "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "devtron": "^1.4.0",
     "electron": "^7.2.4",
-    "electron-builder": "^22.7.0",
-    "electron-debug": "^3.0.1",
+    "electron-builder": "^22.11.10",
+    "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "strip-ansi": "^3.0.1",
-    "vue-cli-plugin-electron-builder": "^1.3.6"
+    "vue-cli-plugin-electron-builder": "^1.4.6",
+    "vue-template-compiler": "2.6.10"
   },
   "engines": {
     "node": ">= 10.0.0",
